# mcx_helpdesk

./: .editorconfig  .gitignore  CLIENT_DEMO_GUIDE.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml
desk/: .gitignore  build.mjs  dev.mjs  vite.config.cjs
desk/overrides/: App.vue  README.md
desk/overrides/components/: CommunicationArea.vue
desk/overrides/composables/: mcxCommunication.ts
desk/overrides/pages/: CustomerPortalRoot.vue
desk/overrides/router/: index.ts
mcx_helpdesk/: constants.py  hooks.py  modules.txt  patches.txt
mcx_helpdesk/api/: ai.py  article.py  chatbot.py  dashboard.py  supervisor.py  ticket.py
mcx_helpdesk/fixtures/: custom_field.json  doctype.json  hd_form_script.json  hd_sub_issue_type.json  hd_team.json  hd_ticket_template.json  hd_ticket_type.json  property_setter.json  translation.json
mcx_helpdesk/mcx_helpdesk/: ai_assist.py  ai_chatbot.py  classification_rules.py  escalation.py  escalation_settings.py  sla_alerts.py  sla_settings.py  test_classification_rules.py  test_escalation.py  test_faq_chatbot.py  test_sla_alerts.py  test_ticket_classifier.py  test_workflow_engine.py  ticket_classifier.py  workflow_engine.py
mcx_helpdesk/mcx_helpdesk/custom/: hd_ticket.json
mcx_helpdesk/patches/v1_0/: remove_legacy_helpdesk_teams.py  setup_faq.py  (+3 more)
mcx_helpdesk/public/: node_modules
mcx_helpdesk/setup/: automation.py  classification.py  dashboard_labels.py  data_cleanup.py  demo.py  demo_sla_tickets.py  escalation.py  faq.py  install.py  permissions.py  seed_data.py  sync.py
scripts/: apply_helpdesk_ui.sh
(+33 files in other folders)
