[project]
name = "mcx_helpdesk"
authors = [
    { name = "Ascra Technologies LLP", email = "info@ascra.com" }
]
description = "MCX Helpdesk customizations for RFP demo (classification and routing)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<=17.0.0-dev"
helpdesk = ">=1.0.0"
