[project]
name = "mcx_helpdesk"
authors = [
    { name = "Ascra Technologies LLP", email = "info@ascra.com" }
]
description = "MCX Helpdesk customizations for RFP demo (classification and routing)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "requests>=2.28",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0,<=17.0.0-dev"
helpdesk = ">=1.0.0"

# Rebuilds Helpdesk desk SPA with MCX UI overrides from desk/overrides/.
# Run: bench build --app mcx_helpdesk  (after helpdesk is installed)
[tool.bench.assets]
build_dir = "./desk"
out_dir = "../helpdesk/helpdesk/public/desk"

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E", "W", "I"]
ignore = ["E501", "W191", "W293", "I001"]
